[package]
name = "manga"
version = "0.1.0"
edition = "2021"

[lib]
name = "manga"
path = "src/lib.rs"

[[bin]]
name = "manga"
path = "src/main.rs"

[features]
default = ["giga", "fuz"]

giga = ["rss"]
fuz = ["prost", "tonic", "tonic-build"]


[dependencies]
clap = "4.5.16"
image = "0.25.2"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"

rss = { version = "2.0.8", optional = true }
prost = { version = "0.13.2", optional = true }
tonic = { version = "0.12.2", optional = true }

[build-dependencies]
tonic-build = { version = "0.12.2", optional = true }
