[package]
name = "manga"
version = "0.1.0"
edition = "2021"

[lib]
name = "manga"
path = "src/lib.rs"

[[bin]]
name = "manga"
path = "src/main.rs"

[features]
default = ["giga", "fuz"]

giga = ["rss"]
fuz = ["prost", "prost-build", "aes", "hex", "cbc", "cipher"]


[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
image = "0.25.2"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"
rayon = "1.10.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }
indicatif = { version = "0.17.8", features = ["futures", "rayon", "tokio"] }
zip = "2.2.0"
num_cpus = "1.16.0"
regex = "1.10.6"

# pdf
pdf-writer = "0.11.0"
flate2 = "1.0.33"

# giga
rss = { version = "2.0.8", optional = true }

# fuz
prost = { version = "0.13.3", optional = true }
aes = { version = "0.8.4", optional = true }
hex = { version = "0.4.3", optional = true }
cbc = { version = "0.1.2", optional = true }
cipher = { version = "0.4.4", features = ["block-padding"], optional = true }
phf = { version = "0.11.2", features = ["macros"] }

[build-dependencies]
prost-build = { version = "0.13.3", optional = true }
